--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ aiofiles
 pyrogram==1.4.16
 tgcrypto
 python-dotenv
-py-tgcalls==0.8.2
+py-tgcalls
 youtube-search-python
 git+https://github.com/asmsafone/downloader
